@@ -1,3 +1,9 @@
+2008-02-06  Sankar P  <psankar@novell.com>
+
+	* camel/camel-exchange-store.c: (construct):
+	Do not show two junk folders for exchange. 
+	Exchange has Actual Junk and not VJunk.
+
 2008-02-05  Milan Crha  <mcrha@redhat.com>
 
 	** Fix for bug #436628
